# mail

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
benchmarks/: CMakeLists.txt  README.md
docs/: architecture.md  plan.md
docs/logs/: 2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-20.md  2026-07-21.md  2026-07-22.md
src/: CMakeLists.txt
src/client/: main.cpp
src/common/: CMakeLists.txt
src/common/include/mail/: base64.hpp  file_descriptor.hpp  io_status.hpp  limits.hpp  result.hpp
src/common/include/mail/auth/: password.hpp  sasl.hpp  user_store.hpp
src/common/include/mail/net/: byte_sink.hpp  byte_source.hpp  connection.hpp  line_reader.hpp  listener.hpp
src/common/include/mail/smtp/: command.hpp  envelope.hpp  message_sink.hpp  recipient_verifier.hpp  reply.hpp  session.hpp
src/common/include/mail/store/: maildir.hpp  maildir_name.hpp
src/common/src/: base64.cpp
src/common/src/auth/: password.cpp  sasl.cpp  user_store.cpp
src/common/src/net/: connection.cpp  line_reader.cpp  listener.cpp
src/common/src/smtp/: command.cpp  reply.cpp  session.cpp
src/common/src/store/: maildir.cpp  maildir_name.cpp
src/custom/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  maildir_sink.hpp  main.cpp  user_store_verifier.hpp
tests/: CMakeLists.txt  auth_password_test.cpp  auth_sasl_test.cpp  auth_user_store_test.cpp  base64_test.cpp  line_reader_test.cpp  maildir_name_test.cpp  maildir_sink_test.cpp  maildir_store_test.cpp  net_integration_test.cpp  smtp_command_test.cpp  smtp_session_test.cpp  user_store_verifier_test.cpp
